--- a/packages/ec-scripts-preset-react/package.json
+++ b/packages/ec-scripts-preset-react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ec-scripts-react",
   "version": "0.1.0",
-  "description": "",
+  "description": "React preset for ec-scripts.",
   "main": "ecconf.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,13 +9,20 @@
   "license": "MIT",
   "dependencies": {
     "babel-preset-react": "^6.24.1",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.1",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.4.0",
     "html-webpack-plugin": "^2.30.1",
+    "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-hot-loader": "^3.0.0-beta.7",
-    "webpack": "^3.6.0"
+    "react-test-renderer": "^16.0.0",
+    "webpack": "3.x"
+  },
+  "peerDependencies": {
+    "ec-scripts": "0.x || 1.x"
   }
 }
