--- a/packages/ec-scripts-preset-react/package.json
+++ b/packages/ec-scripts-preset-react/package.json
@@ -14,13 +14,11 @@
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.4.0",
-    "html-webpack-plugin": "^2.30.1",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-hot-loader": "^3.0.0-beta.7",
-    "react-test-renderer": "^16.0.0",
-    "webpack": "3.x"
+    "react-test-renderer": "^16.0.0"
   },
   "peerDependencies": {
     "ec-scripts": "0.x || 1.x"
