Update package.json scripts and rename ecconf.js

--- a/packages/ec-scripts-sample-project/package.json
+++ b/packages/ec-scripts-sample-project/package.json
@@ -3,17 +3,17 @@
   "version": "1.0.0",
   "description": "A sample project using ec-scripts.",
   "scripts": {
-    "init": "cross-env NODE_ENV=development ec-scripts --init",
-    "start": "cross-env NODE_ENV=development ec-scripts --start",
-    "build": "cross-env NODE_ENV=production ec-scripts --build",
-    "build-watch": "cross-env NODE_ENV=production ec-scripts --build --watch",
-    "test": "cross-env NODE_ENV=test ec-scripts --test",
-    "config": "cross-env NODE_ENV=development ec-scripts --show-config"
+    "init": "cross-env NODE_ENV=development ec-scripts init",
+    "start": "cross-env NODE_ENV=development ec-scripts start",
+    "build": "cross-env NODE_ENV=production ec-scripts build",
+    "build-watch": "cross-env NODE_ENV=production ec-scripts build --watch",
+    "test": "cross-env NODE_ENV=test ec-scripts test",
+    "config": "cross-env NODE_ENV=development ec-scripts show-config"
   },
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
-    "ec-scripts": "git+https://git@gitlab.ecentral.de/f.laukel/ec-scripts.git#develop",
+    "ec-scripts": "git+https://git@gitlab.ecentral.de/f.laukel/ec-scripts.git#feature/latest-feedback",
     "ec-scripts-react": "git+https://git@gitlab.ecentral.de/f.laukel/ec-scripts-react.git#develop"
   }
 }
