--- a/packages/ec-scripts-cli/package.json
+++ b/packages/ec-scripts-cli/package.json
@@ -33,6 +33,7 @@
     "cross-spawn-promise": "^0.10.1",
     "fs-extra": "^4.0.2",
     "inquirer": "^3.3.0",
+    "which": "^1.3.0",
     "yargs": "^10.0.3"
   },
   "devDependencies": {
