--- a/packages/ec-scripts-sample-project/package.json
+++ b/packages/ec-scripts-sample-project/package.json
@@ -11,13 +11,10 @@
     "config": "cross-env NODE_ENV=development ec-scripts show-config"
   },
   "license": "MIT",
-  "dependencies": {
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "react-test-renderer": "^16.6.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "ec-scripts": "git+https://git@gitlab.ecentral.de/f.laukel/ec-scripts.git#develop",
-    "ec-scripts-preset-react": "git+https://git@gitlab.ecentral.de/f.laukel/ec-scripts-preset-react.git#develop"
+    "ec-scripts-preset-react": "git+https://git@gitlab.ecentral.de/f.laukel/ec-scripts-preset-react.git#develop",
+    "ec-scripts-preset-sass": "^1.0.0"
   }
 }
