Change all urls in package.json and READMEs to match upcoming namespace

--- a/packages/ec-scripts-cli/package.json
+++ b/packages/ec-scripts-cli/package.json
@@ -14,7 +14,8 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/ecentral/ec-scripts-cli.git"
+    "url": "https://github.com/ecentral/ecentral-scripts.git",
+    "directory": "packages/ec-cli"
   },
   "main": "bin/ec-cli.js",
   "bin": {
