--- a/packages/ec-scripts-preset-react/package.json
+++ b/packages/ec-scripts-preset-react/package.json
@@ -13,7 +13,8 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/ecentral/ec-scripts-preset-react.git"
+    "url": "https://github.com/ecentral/ecentral-scripts.git",
+    "directory": "packages/ec-scripts-preset-react"
   },
   "main": "ecconf.js",
   "scripts": {
