--- a/packages/ec-scripts/package.json
+++ b/packages/ec-scripts/package.json
@@ -14,7 +14,8 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/ecentral/ec-scripts.git"
+    "url": "https://github.com/ecentral/ecentral-scripts.git",
+    "directory": "packages/ec-scripts"
   },
   "main": "lib/index.js",
   "bin": {
